examples/malgo/error/error_fun.mlg
let fun f(u : {}) : {} = u
    fun g(a : Int) : {} = a
in f(g(1))